# btcpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: CMakeLists.txt  address.h  bip32.cpp  bip32.hpp  bip39.cpp  bip39.hpp  crypto.cpp  crypto.hpp  ec.cpp  ec.hpp  encoding.cpp  encoding.hpp  utils.cpp  utils.hpp
src/bip32/: types.hpp
src/bip39/: details.cpp  details.hpp  dictionary.cpp  dictionary.hpp  types.hpp
test/: CMakeLists.txt  bip32.cpp  bip39.cpp  encoding.cpp
test/data/: bip39_testvector.hpp  testvectors.cpp  testvectors.hpp
